MFH: Fix bug #43364 (recursive xincludes don't remove internal nodes properly) add test